AC_INIT([libcbc], [1.0], [bug-libcbc@libcbc.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
    Makefile
    crypto/Makefile
    crypto/primitives/Makefile
    crypto/primitives/encryption/Makefile
    crypto/primitives/encryption/internal/Makefile
    test/Makefile
])
AC_OUTPUT
